sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:4: error: value ro is not a member of Int
  for (i <- 1 ro getNombreValeurs()-1) {
              ^